# coterms

./: .gitignore  Cargo.toml
.cargo/: mutants.toml
.pbt/: 00445915BE48F916-_alloc__boxed__Box_bool___u64_.jsonl  0E3DA849E32B0222-alloc__boxed__Box_bool_.jsonl  18FDCE7A9DDCF0FB-std__collections__hash__map__HashMap_alloc__sync__Arc_coterms__RootedPath___coterms__ErasedLeaf__ahash__random_state__RandomState_.jsonl  2BB39AFD481A59C6-coterms__boolean__BoolLeaf.jsonl  3EA3927F68B9A163-coterms__boolean__BoolNode.jsonl  4B2E0A98E8CC2D25-coterms__binary_tree__BinaryTreeSlot.jsonl
coterms/: Cargo.toml
coterms-macro2/: Cargo.toml
coterms-macro2/src/: lib.rs
coterms-macros/: Cargo.toml
coterms-macros/src/: lib.rs
coterms-tests/: Cargo.toml
coterms-tests/src/: lib.rs
coterms-tests/tests/: derive.rs
coterms/src/: binary_tree.rs  boolean.rs  boxes.rs  incremental.rs  incremental_v1.rs  lib.rs  list_is_finite.rs  nth_boolean.rs  option.rs  pair.rs  peano.rs  redex.rs  unit.rs
