[package]
name = "coterms-macro2"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
heck = "~0.5"
pretty_assertions = "~1.4"
prettyplease = "~0.2"
proc-macro2 = "~1.0"
quote = "~1.0"
syn = "~2.0"


[lints]
workspace = true
