[package]
name = "coterms-macros"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[lib]
proc-macro = true


[dependencies]
coterms-macro2 = { path = "../coterms-macro2" }
proc-macro2 = "~1.0"


[lints]
workspace = true
