[package]
name = "coterms"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ahash = "~0.8"
pbt = "~0.5"

[lints]
workspace = true
